--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Bayarsaikhan">
     <link rel="manifest" href="./manifest.json">
     <link rel="icon" type="image/x-icon" href="./logo-blue.png">
-    <title>Gerege Systems </title>
+    <title>MCPA</title>
 </head>
 
 <body>
